Mon Feb 21 13:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRunLoop.m: Use sel_eq() for selector comparison so that
	we are guaranteed to match correctly when removing actions from the
	runloop.

Fri Feb  6 14:54:00 2000  Manuel Guesdon <mguesdon@sbuilders.com>

	* Source/NSCalendarDate.m: handle nil and empry string in 
		-initWithString:calendarFormat:locale:
	* ChangeLog: Replace 1999 by 2000 for last modifications :-)

Fri Feb  4 17:20:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPortNameServer.m: New methods for use by NSConnection
	* Foundation/NSPortNameServer.h: ditto
	* Source/NSConnection.m: Tidied a little and added ([-registerName:])
	* Source/NSConnection.h: ditto

2000-02-17  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.5 released.

2000-02-16  Adam Fedor  <fedor@gnu.org>

	* gnustep-base.spec: Newfile

Wed Feb 16 06:28:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSAssertionHandler.m: Applied patch by David relson to change
	output format for function assertions, fixed error in format string,
	 and made similar changes for method assertions.

2000-02-14  Adam Fedor  <fedor@gnu.org>

	* Version: Update version number
	* Documentation/announce.tmpl.texi: Update
	* Documentation/readme.tmpl.texi: Likewise.
	* Documentation/news.tmpl.texi: Likewise.
	* Documentation/todo.tmpl.texi: Likewise.
	* ANNOUNCE, BUGS, NEWS, README: Regenerate

Fri Feb 11 06:27:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSZone.m: Tidied indentation etc to GNU style.

Thu Feb 10 23:01:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSDebug.m: Patch by David Relson to change memory allocation
	report and add thread-safety.  Modified by me to automatically use
	locking if necessary, to tidy up, and to fix a couple of bugs in
	lock/unlock sequencing.  All new stuff - but since the previous